# gator-client

./: .gitignore  README.md  pyproject.toml
gator/api/: client.py  helpers.py
src/gator/api/client/: __init__.py  helpers.py
tests/: helpers.py  test_client.py  test_helpers.py
tests/client/: test_client.py  test_helpers.py
tests/client/fixtures/: course_ACT350.json  courses_all.json  courses_some.json  organisation_MAT.json  organisations.json
tests/fixtures/: course_ACT350.json  courses_all.json  courses_some.json  organisation_MAT.json  organisations.json
tests/helpers/: __init__.py
