[tool.poetry]
name = "gator-client"
version = "0.0.0"  # placeholder for the real version, which is retrieved from git tags
description = "Web client for the Gator API"
authors = ["Shon Verch <verchshon@gmail>"]
license = "MIT"
packages = [
    { include = "gator" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.9"
certifi = "^2022.6.15"
gator-models = "^1.1.2"
pytest-httpserver = "^1.0.4"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
