[tool.poetry]
name = "gator-client"
version = "0.0.0"  # placeholder for the real version, which is retrieved from git tags
description = "A web client for the Gator API"
authors = ["Shon Verch <verchshon@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "gator", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]
exclude = [
    "**/*.pyc",
    "**/*.pyi",
]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.9"
certifi = "^2022.6.15"
gator-core = "^1.1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-httpserver = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
